--- a/index.html
+++ b/index.html
@@ -70,15 +70,20 @@
                     <img src="icons/share.svg" class="share-img">
                 </div></a>
 
-                <img class="bitmap-2" src="photo\author.jpg">
+                <div class="div-bitmap-2">
+                    <img class="bitmap-2" src="photo\author.jpg">
+                </div>
+
                 <div class="form-bottom">
                     <h5 class="author-name">Matthew Schwartz</h5>
                     <p class="author-BIO">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est.</p>
-            
-                    <form class="relative-form">
-                        <input type="text" class="input-form" size="40" placeholder="    Subscribe me now!">
-                        <input type="submit" value="Subscribe" class="button-subscribe" />
-                    </form>
+                    
+                    <div class="subscribe-form">
+                        <form>
+                            <input type="text" class="input-form" size="40" placeholder="    Subscribe me now!">
+                            <input type="submit" value="Subscribe" class="button-subscribe" />
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
